<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rankLabel"
            style="@style/ModalLabelTextTheme"
            android:text="@string/rank"/>

        <TextView
            android:id="@+id/rankField"
            style="@style/ModalTextTheme"
            android:text="@string/lorem_ipsum"/>

        <TextView
            android:id="@+id/fullNameLabel"
            style="@style/ModalLabelTextTheme"
            android:text="@string/full_name"/>

        <TextView
            android:id="@+id/fullNameField"
            style="@style/ModalTextTheme"
            android:text="@string/lorem_ipsum"/>

        <TextView
            android:id="@+id/priceUsdLabel"
            style="@style/ModalLabelTextTheme"
            android:text="@string/price_usd"/>

        <TextView
            android:id="@+id/priceUsdField"
            style="@style/ModalTextTheme"
            android:text="@string/lorem_ipsum"/>

        <TextView
            android:id="@+id/dailyVolumeUsdLabel"
            style="@style/ModalLabelTextTheme"
            android:text="@string/volume_24h"/>

        <TextView
            android:id="@+id/dailyVolumeUsdField"
            style="@style/ModalTextTheme"
            android:text="@string/lorem_ipsum"/>

        <TextView
            android:id="@+id/marketCapUsdLabel"
            style="@style/ModalLabelTextTheme"
            android:text="@string/market_cap"/>

        <TextView
            android:id="@+id/marketCapUsdField"
            style="@style/ModalTextTheme"
            android:text="@string/lorem_ipsum"/>

        <TextView
            android:id="@+id/availableSupplyLabel"
            style="@style/ModalLabelTextTheme"
            android:text="@string/available_supply"/>

        <TextView
            android:id="@+id/availableSupplyField"
            style="@style/ModalTextTheme"
            android:text="@string/lorem_ipsum"/>

        <TextView
            android:id="@+id/totalSupplyLabel"
            style="@style/ModalLabelTextTheme"
            android:text="@string/total_supply"/>

        <TextView
            android:id="@+id/totalSupplyField"
            style="@style/ModalTextTheme"
            android:text="@string/lorem_ipsum"/>

        <TextView
            android:id="@+id/lastUpdateTimeLabel"
            style="@style/ModalLabelTextTheme"
            android:text="@string/last_updated"/>

        <TextView
            android:id="@+id/lastUpdateTimeField"
            style="@style/ModalTextTheme"
            android:text="@string/lorem_ipsum"/>
    </LinearLayout>
</ScrollView>