<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pw.robertlewicki.coinwatcher.Activities.MainActivity">
    <item
        android:id="@+id/action_clear_list"
        android:orderInCategory="200"
        android:title="@string/action_clear_list"
        app:showAsAction="never"
    />
    <item
        android:id="@+id/action_about_page"
        android:orderInCategory="300"
        android:title="@string/about"
        app:showAsAction="never"
    />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="50"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"
    />
</menu>
